--- a/app/src/main/res/drawable/current_location_circle.xml
+++ b/app/src/main/res/drawable/current_location_circle.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-    <selector xmlns:android="http://schemas.android.com/apk/res/android">
-        <item>
-            <shape android:shape="oval">
-                <solid android:color="#0082C9"/>
-                <stroke android:color="#FFFFFF" android:width="2dp"/>
-                <size android:width="15dp" android:height="15dp"/>
-            </shape>
-        </item>
-    </selector>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="#0082C9" />
+            <stroke android:width="2dp" android:color="#FFFFFF" />
+            <size android:width="15dp" android:height="15dp" />
+        </shape>
+    </item>
+</selector>
