set pipGroupCallOverlay to gone when not needed
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/layout/call_activity.xml
+++ b/app/src/main/res/layout/call_activity.xml
@@ -202,7 +202,7 @@
         android:orientation="vertical"
         android:background="@color/black"
         android:gravity="center"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/pipCallConversationNameTextView"
