mark message as unread / conversation as read
Resolves #1464

Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/menu/chat_message_menu.xml
+++ b/app/src/main/res/menu/chat_message_menu.xml
@@ -9,6 +9,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_mark_as_unread"
+        android:icon="@drawable/ic_eye_off"
+        android:title="@string/nc_mark_as_unread"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_forward_message"
         android:icon="@drawable/ic_share_action"
         android:title="@string/nc_forward_message"
